# cpp-voxel-engine

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: base.vert  base_fragment.glsl  base_vertex.glsl  skybox.vert
assets/textures/blocks/: terrain_block_map.json  terrain_texture_uv.json
include/: camera.h  chunk.h  cube.h  cube_mesh.h  engine.h  shader.h  world.h
intern/: CMakeLists.txt  engine.cpp  engine.h  engine.hpp
intern/core/: CMakeLists.txt
intern/core/clock/: clock.cpp  clock.h  clock.hpp
intern/core/window/: window.cpp  window.h  window.hpp
intern/graphics/: CMakeLists.txt
intern/graphics/camera/: camera.cpp  camera.h  camera.hpp
intern/graphics/renderer/: renderer.cpp  renderer.h  renderer.hpp
intern/graphics/shader/: shader.cpp  shader.h  shader.hpp
intern/graphics/skybox/: skybox.cpp  skybox.h  skybox.hpp
intern/graphics/texture_atlas/: texture_atlas.cpp  texture_atlas.h  texture_atlas.hpp
intern/gui/: CMakeLists.txt  controls_panel.cpp  controls_panel.h  controls_panel.hpp  gui_manager.cpp  panel_manager.cpp  panel_manager.hpp  stats_panel.cpp  stats_panel.hpp
intern/world/: CMakeLists.txt  chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  chunk_manager.hpp
modules/camera/: CMakeLists.txt  camera.cpp  camera.h
modules/clock/: CMakeLists.txt  clock.cpp  clock.h
modules/core/: CMakeLists.txt  chunk.h  engine.cpp  engine.h
modules/gui/: CMakeLists.txt  controls_panel.cpp  gui.cpp  gui.h  gui_manager.cpp  gui_manager.h  igui_panel.h  stats_panel.cpp  stats_panel.h
modules/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
modules/shader/: CMakeLists.txt
modules/skybox/: CMakeLists.txt  skybox.cpp  skybox.h
modules/texture_atlas/: CMakeLists.txt  texture_atlas.cpp  texture_atlas.h
modules/window/: CMakeLists.txt  window.cpp  window.h
modules/world/: CMakeLists.txt  chunk.cpp  chunk.h  geometry.h  world.cpp  world.h
scripts/: build.py
source/: camera.cpp  chunk.cpp  cube.cpp  cube_mesh.cpp  engine.cpp  main.cpp  shader.cpp  world.cpp
source/app/: CMakeLists.txt  main.cpp
source/application/: CMakeLists.txt
source/engine/: CMakeLists.txt  chunk.h  engine.cpp  engine.h  world.h
tools/: build.py
